SFDC Automation/src/objects/SIC_Code__c.object
<CustomObject>
    <description>Table to display Codes + Descriptions</description>
    <fields>
        <fullName>Food_Beverage_Industry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Food &amp; Beverage Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Description__c</fullName>
        <description>Description of SIC Code Value</description>
        <label>SIC Code Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ext_SICCodeID__c</fullName>
        <description>Used to insert the unique D&amp;B sic code value into the Account lookup to SIC Code table.</description>
        <externalId>true</externalId>
        <label>ext_SICCodeID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SIC Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SIC_Code_Description__c</columns>
        <columns>Food_Beverage_Industry__c</columns>
        <columns>ext_SICCodeID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SIC Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SIC Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>